--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-HOST=localhost
-USER=root
-PASSWORD=
-DATABASE=node
+MYSQL_HOST=localhost
+MYSQL_USER=root_admin
+MYSQL_PASSWORD=
+MYSQL_DATABASE=name_database
 PORT=3000
